fix(convocatorias): resolver mutabilidad en builder mediante inicialización explícita
Se añade una estructura limpia con bloque if-else en el setter del Builder y se inicializa la lista para forzar la copia defensiva, asegurando que DeepSource valide correctamente el encapsulamiento.